# bridge-writer

./: README.md
Code/: .mxproject  BridgeWriter_v1.ioc  CMakeLists.txt
Code/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Code/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Code/Drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7xx.h
Code/app/: CMakeLists.txt  HEADER_INCLUDE.cpp  HEADER_INCLUDE.h
Code/app/Driver/: CMakeLists.txt
Code/app/Driver/Ethernet/: CMakeLists.txt  mEthernet.cpp  mEthernet.hpp
Code/app/Driver/FDCAN/: CMakeLists.txt  data_template.hpp  mFDCAN.cpp  mFDCAN.hpp  mFDCAN_data_template.hpp
Code/app/Driver/MicroSD/: CMakeLists.txt  mMSDC.cpp  mMSDC.hpp
Code/app/Driver/Thermal_Management/: CMakeLists.txt  mThermal_Management.cpp  mThermal_Management.hpp
Code/app/Driver/USB/: CMakeLists.txt  mUSB_HS.cpp  mUSB_HS.hpp
Code/app/main_FW/: CMakeLists.txt  main_FW.cpp  main_FW.hpp
Code/cmake/stm32cubemx/: CMakeLists.txt
PCB/BridgeWriter_v0/: BridgeWriter_v0.kicad_pcb  BridgeWriter_v0.kicad_prl  BridgeWriter_v0.kicad_pro  BridgeWriter_v0.kicad_sch  fp-info-cache
PCB/BridgeWriter_v0/production/: bom.csv  netlist.ipc  positions.csv
PCB/BridgeWriter_v1/: BridgeWriter_v1.kicad_pcb  BridgeWriter_v1.kicad_prl  BridgeWriter_v1.kicad_pro  BridgeWriter_v1.kicad_sch  fp-info-cache
PCB/BridgeWriter_v1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
System_Block/: Bridge_Writer-FirmWare_UpDate.pu  Bridge_Writer-System.pu
